--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,15 +1,15 @@
 # Copyright (C) 2021 Free Software Foundation, Inc.
 #
-# Marcus Gama <marcus.gama@gmail.com>, 2021.
 #: ../build/bin/conf_gen.h:843 ../build/bin/conf_gen.h:849
 #: ../build/bin/conf_gen.h:855 ../build/bin/conf_gen.h:861
 #: ../build/bin/conf_gen.h:867
+# Marcus Gama <marcus.gama@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: darktable 2.x\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-09-30 11:08-0300\n"
-"PO-Revision-Date: 2021-09-30 13:03-0300\n"
+"PO-Revision-Date: 2021-10-01 20:01-0300\n"
 "Last-Translator: Marcus Gama <marcus.gama@gmail.com>\n"
 "Language-Team: Portuguese <darktable-dev@lists.darktable.org>\n"
 "Language: pt_BR\n"
@@ -8162,9 +8162,8 @@ msgid "down"
 msgstr "para baixo"
 
 #: ../src/gui/accelerators.c:109
-#, fuzzy
 msgid "set"
-msgstr "redefinir"
+msgstr "definir"
 
 #: ../src/gui/accelerators.c:112
 msgid "popup"
@@ -8588,16 +8587,16 @@ msgid "type"
 msgstr "tipo"
 
 #: ../src/gui/accelerators.c:2168
-#, fuzzy
 msgid "enable fallbacks"
-msgstr "alternativas"
+msgstr "ativar fallbacks"
 
 #: ../src/gui/accelerators.c:2169
 msgid ""
 "enables default meanings for additional buttons, modifiers or moves\n"
 "when used in combination with a base shortcut"
 msgstr ""
-"habilita significados padrão para botões, modificadores ou movimentos adicionais,\n"
+"habilita significados padrão para botões, modificadores ou movimentos"
+" adicionais,\n"
 "quando usados em combinação com um atalho base"
 
 #: ../src/gui/accelerators.c:2175
@@ -8630,9 +8629,8 @@ msgid "input devices reinitialised"
 msgstr "dispositivos de entrada reinicializados"
 
 #: ../src/gui/accelerators.c:2795
-#, fuzzy
 msgid "fallback to move"
-msgstr "alternativas"
+msgstr "fallback para mover"
 
 #: ../src/gui/accelerators.c:2974
 #, c-format
@@ -8675,40 +8673,34 @@ msgstr "fechando o darktable..."
 
 #. register keys for view switching
 #: ../src/gui/gtk.c:1209
-#, fuzzy
 msgctxt "accel"
 msgid "switch views/tethering"
-msgstr "muda vista"
+msgstr "alternar vistas/acesso remoto"
 
 #: ../src/gui/gtk.c:1210
-#, fuzzy
 msgctxt "accel"
 msgid "switch views/lighttable"
-msgstr "mudar para mesa de luz"
+msgstr "alternar vistas/mesa de luz"
 
 #: ../src/gui/gtk.c:1211
-#, fuzzy
 msgctxt "accel"
 msgid "switch views/darkroom"
-msgstr "muda vista"
+msgstr "alternar vistas/sala escura"
 
 #: ../src/gui/gtk.c:1212
-#, fuzzy
 msgctxt "accel"
 msgid "switch views/map"
-msgstr "muda vista"
+msgstr "alternar vistas/mapa"
 
 #: ../src/gui/gtk.c:1213
-#, fuzzy
 msgctxt "accel"
 msgid "switch views/slideshow"
-msgstr "muda vista"
+msgstr "alternar vistas/apresentação"
 
 #: ../src/gui/gtk.c:1214
-#, fuzzy
 msgctxt "accel"
 msgid "switch views/print"
-msgstr "muda vista"
+msgstr "alternar vistas/imprimir"
 
 #. register ctrl-q to quit:
 #: ../src/gui/gtk.c:1237
@@ -8726,18 +8718,17 @@ msgstr "tela cheia"
 #: ../src/gui/gtk.c:1248
 msgctxt "accel"
 msgid "panels/all"
-msgstr ""
+msgstr "painéis/todos"
 
 #: ../src/gui/gtk.c:1252
-#, fuzzy
 msgctxt "accel"
 msgid "panels/collapsing controls"
-msgstr "alterna controles para recolher painéis"
+msgstr "painéis/recolher controles"
 
 #: ../src/gui/gtk.c:1256
 msgctxt "accel"
 msgid "panels/left"
-msgstr "painéis/esquerta"
+msgstr "painéis/esquerda"
 
 #: ../src/gui/gtk.c:1260
 msgctxt "accel"
@@ -8756,45 +8747,40 @@ msgstr "painéis/inferior"
 
 #. specific top/bottom toggles
 #: ../src/gui/gtk.c:1273
-#, fuzzy
 msgctxt "accel"
 msgid "panels/header"
-msgstr "líder"
+msgstr "painéis/cabeçalho"
 
 #: ../src/gui/gtk.c:1276
-#, fuzzy
 msgctxt "accel"
 msgid "panels/filmstrip and timeline"
-msgstr "alterna rolo de filme e linha do tempo"
+msgstr "painéis/rolo de filme e linha do tempo"
 
 #: ../src/gui/gtk.c:1280
-#, fuzzy
 msgctxt "accel"
 msgid "panels/top toolbar"
-msgstr "alterna barra de ferramentas acima"
+msgstr "painéis/barra de ferramentas superior"
 
 #: ../src/gui/gtk.c:1284
-#, fuzzy
 msgctxt "accel"
 msgid "panels/bottom toolbar"
-msgstr "alterna barra de ferramentas inferior"
+msgstr "painéis/barra de ferramentas inferior"
 
 #: ../src/gui/gtk.c:1288
 msgctxt "accel"
 msgid "panels/all top"
-msgstr ""
+msgstr "painéis/tudo acima"
 
 #: ../src/gui/gtk.c:1292
 msgctxt "accel"
 msgid "panels/all bottom"
-msgstr ""
+msgstr "painéis/tudo abaixo"
 
 #. View-switch
 #: ../src/gui/gtk.c:1297
-#, fuzzy
 msgctxt "accel"
 msgid "switch views/lighttable ↔ darkroom"
-msgstr "Mesa de Luz e Sala Escura Virtuais"
+msgstr "alternar vistas/mesa de luz ↔ sala escura"
 
 #. accels window
 #: ../src/gui/gtk.c:1303
@@ -8826,9 +8812,8 @@ msgstr "alterna foco máximo"
 
 #: ../src/gui/gtk.c:1513 ../src/gui/gtk.c:1529 ../src/gui/gtk.c:1563
 #: ../src/gui/gtk.c:1577
-#, fuzzy
 msgid "panels"
-msgstr "painéis/superior"
+msgstr "painéis"
 
 #. font name can only use period as decimal separator
 #. but printf format strings use comma for some locales, so replace comma with period
@@ -9381,17 +9366,15 @@ msgid "auto"
 msgstr "auto"
 
 #: ../src/gui/preferences.c:854
-#, fuzzy
 msgid "search presets list"
-msgstr "buscar na lista de atalhos"
+msgstr "buscar na lista de predefinições"
 
 #: ../src/gui/preferences.c:855
-#, fuzzy
 msgid ""
 "incrementally search the list of presets\n"
 "press up or down keys to cycle through matches"
 msgstr ""
-"busca incremental na lista de ações\n"
+"busca incremental na lista de predefinições\n"
 "pressione as teclas para cima e para baixo para percorrer ciclicamente os "
 "resultados"
 
@@ -10382,9 +10365,8 @@ msgid "rotation and perspective"
 msgstr "rotação e perspectiva"
 
 #: ../src/iop/ashift.c:125
-#, fuzzy
 msgid "rotate|keystone|distortion|crop|reframe"
-msgstr "distorção de perspectiva|distorção"
+msgstr "girar|chave|distorção|cortar|reenquadrar"
 
 #: ../src/iop/ashift.c:130
 msgid "rotate or distort perspective"
@@ -10464,9 +10446,8 @@ msgid "lens shift (%s)"
 msgstr "deslocamento da lente (%s)"
 
 #: ../src/iop/ashift.c:5735
-#, fuzzy
 msgid "perspective helpers"
-msgstr "perspectiva"
+msgstr "auxiliares de perspectiva"
 
 #: ../src/iop/ashift.c:5742
 msgid "structure"
@@ -10478,6 +10459,9 @@ msgid ""
 "right-click and drag to define a horizontal or vertical line by drawing on "
 "the image"
 msgstr ""
+"girar imagem\n"
+"clique-direito e arraste para definir uma linha horizontal ou vertical"
+" desenhando na imagem"
 
 #: ../src/iop/ashift.c:5776 ../src/iop/ashift.c:5777
 msgid "apply lens shift correction in one direction"
